SERVER-78260  Contained $or rewrite optimization incorrectly lifts a negation predicate outside an $elemMatch leading to missing query results