src/mongo/db/query/query_planner_wildcard_index_test.cpp
@@ -199,19 +199,6 @@ TEST_F(QueryPlannerWildcardTest, NotEqualsNullInElemMatchQueriesUseWildcardIndex
         "'x': [['MinKey', 'MaxKey',true,true]]}}}}}");
 }
 
-TEST_F(QueryPlannerWildcardTest, NotEqualsNullInElemMatchObjectSparseMultiKeyAboveElemMatch) {
-    addWildcardIndex(BSON("$**" << 1), {"a", "a.b"});
-
-    runQuery(fromjson("{'a.b': {$elemMatch: {'c.d': {$ne: null}}}}"));
-
-    assertNumSolutions(1U);
-    assertSolutionExists(
-        "{fetch: {node: {ixscan: {pattern: {'$_path': 1, 'a.b.c.d': 1},"
-        "bounds: {'$_path': [['a.b.c.d','a.b.c.d',true,true], ['a.b.c.d.','a.b.c.d/',true,false]],"
-        "'a.b.c.d': [['MinKey', 'MaxKey', true, true]]"
-        "}}}}}");
-}
-
 TEST_F(QueryPlannerWildcardTest, NotEqualsNullInElemMatchObjectSparseMultiKeyBelowElemMatch) {
     // "a.b.c" being multikey will prevent us from using the index since $elemMatch doesn't do
     // implicit array traversal.
